@@ -6,6 +6,8 @@ Ed Sinjiashvili		edsin@swes.saren.ru
 
 */ GRAPHICS */
 
+TDEC_2.png		Jason		-	involution@mail.lokmail.net
+TDEC web banners	Nupur Saurabh	-	saunup@hotmail.com
 tile.png		????
 eye.png			????
 tuxblackpg.png		????
